fix Sonar findings, align grid sizes